[package]
name = "app"
version = "0.1.0"
authors = ["Rajiv Ranganath <rajiv.ranganath@atihita.com>"]
edition = "2018"

[profile.dev]
panic = "abort"
lto = false
opt-level = "z"
debug = true

[profile.release]
panic = "abort"
lto = true
opt-level = "z"
debug = true

[dependencies]
tock = { path = "../libraries/libtock" }
